Sync all content

--- a/content/resources/21g-035f10.md
+++ b/content/resources/21g-035f10.md
@@ -4,11 +4,9 @@ description: A reggae bar in Beijing, China. (Photo by Noel Hidalgo on Flickr.)
 file: /courses/21g-035-topics-in-culture-and-globalization-reggae-as-transnational-culture-fall-2010/47b4d2f195665a337dd87ac341b96952_21g-035f10.jpg
 file_size: 40051
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
-  caption: A reggae bar in Beijing, China. (Photo by [Noel Hidalgo](http://www.flickr.com/photos/noneck/2730937613/)
-    on Flickr.)
+  caption: A reggae bar in Beijing, China. (Photo by {{% resource_link "a3d6b19e-ee47-4c03-872c-19fee4688881"
+    "Noel Hidalgo" %}} on Flickr.)
   credit: Photo by Noel Hidalgo on Flickr.
   image-alt: A green, yellow, and red banner advertises a reggae bar in Mandarin and
     English.
